[gd_scene load_steps=3 format=2]

[ext_resource path="res://sandbox/player.gd" type="Script" id=1]
[ext_resource path="res://sandbox/upgrade.gd" type="Script" id=2]

[node name="test scene" type="Node2D"]

[node name="player" type="Node" parent="."]
script = ExtResource( 1 )

[node name="upgrade" type="Node" parent="player"]
script = ExtResource( 2 )

[node name="true hits" type="Node" parent="."]

[node name="true_hit" type="Timer" parent="true hits"]
autostart = true

[node name="true_hit2" type="Timer" parent="true hits"]
autostart = true

[node name="true_hit3" type="Timer" parent="true hits"]
autostart = true

[node name="true_hit4" type="Timer" parent="true hits"]
autostart = true

[node name="false hits" type="Node" parent="."]

[node name="false_hit" type="Timer" parent="false hits"]
autostart = true

[node name="false_hit2" type="Timer" parent="false hits"]
autostart = true

[node name="false_hit3" type="Timer" parent="false hits"]
autostart = true

[node name="false_hit4" type="Timer" parent="false hits"]
autostart = true

[node name="hits" type="Node" parent="."]

[node name="false_hit" type="Timer" parent="hits"]
autostart = true

[node name="true_hit5" type="Timer" parent="hits"]
autostart = true

[node name="false_hit2" type="Timer" parent="hits"]
autostart = true

[node name="true_hit6" type="Timer" parent="hits"]
autostart = true

[node name="false_hit3" type="Timer" parent="hits"]
autostart = true

[node name="true_hit7" type="Timer" parent="hits"]
autostart = true

[node name="false_hit4" type="Timer" parent="hits"]
autostart = true

[node name="hits2" type="Node" parent="."]

[node name="false_hit" type="Timer" parent="hits2"]
wait_time = 0.001
autostart = true

[node name="true_hit5" type="Timer" parent="hits2"]
wait_time = 0.001
autostart = true

[connection signal="false_hit" from="player" to="player/upgrade" method="_on_player_false_hit"]
[connection signal="timeout" from="true hits/true_hit" to="player" method="_on_true_Timer_timeout"]
[connection signal="timeout" from="true hits/true_hit2" to="player" method="_on_true_Timer_timeout"]
[connection signal="timeout" from="true hits/true_hit3" to="player" method="_on_true_Timer_timeout"]
[connection signal="timeout" from="true hits/true_hit4" to="player" method="_on_true_Timer_timeout"]
[connection signal="timeout" from="false hits/false_hit" to="player" method="_on_false_Timer_timeout"]
[connection signal="timeout" from="false hits/false_hit2" to="player" method="_on_false_Timer_timeout"]
[connection signal="timeout" from="false hits/false_hit3" to="player" method="_on_false_Timer_timeout"]
[connection signal="timeout" from="false hits/false_hit4" to="player" method="_on_false_Timer_timeout"]
[connection signal="timeout" from="hits/false_hit" to="player" method="_on_false_Timer_timeout"]
[connection signal="timeout" from="hits/true_hit5" to="player" method="_on_true_Timer_timeout"]
[connection signal="timeout" from="hits/false_hit2" to="player" method="_on_false_Timer_timeout"]
[connection signal="timeout" from="hits/true_hit6" to="player" method="_on_true_Timer_timeout"]
[connection signal="timeout" from="hits/false_hit3" to="player" method="_on_false_Timer_timeout"]
[connection signal="timeout" from="hits/true_hit7" to="player" method="_on_true_Timer_timeout"]
[connection signal="timeout" from="hits/false_hit4" to="player" method="_on_false_Timer_timeout"]
[connection signal="timeout" from="hits2/false_hit" to="player" method="_on_false_Timer_timeout"]
[connection signal="timeout" from="hits2/true_hit5" to="player" method="_on_true_Timer_timeout"]
